--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>My Phone Site</title>
-  <style>
-    body {
-      font-family: system-ui, Arial;
-      margin: 0;
-      padding: 2rem;
-      background: #f6f8fb;
-    }
-    .card {
-      max-width: 600px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 1.6rem;
-      border-radius: 12px;
-      box-shadow: 0 8px 30px rgba(0,0,0,.08);
-    }
-    button {
-      padding: .6rem 1.1rem;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="card">
@@ -34,10 +15,19 @@
     <button id="btn">Click me</button>
   </div>
 
-  <script>
-    document.getElementById('btn').addEventListener('click', () => {
-      document.getElementById('msg').textContent = 'Clicked at ' + new Date().toLocaleTimeString();
-    });
-  </script>
+  <script src="script.js" defer></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fix JS</title>
+</head>
+<body>
+  <button id="btn">Click me</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
