--- a/index.html
+++ b/index.html
@@ -1,33 +1,55 @@
-<link rel="stylesheet" href="style.css">
-<script src="script.js" defer></script>
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>My Phone Site</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>My Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #89f7fe, #66a6ff);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .card {
+      background: white;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      text-align: center;
+      width: 90%;
+      max-width: 400px;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
   <div class="card">
-    <h1>My Test Website</h1>
-    <p id="msg">Hello — this runs on your phone.</p>
-    <button id="btn">Click me</button>
+    <h1>Welcome to My Website!</h1>
+    <p id="msg">This is my first test website running live on GitHub Pages.</p>
+    <button id="btn">Click Me</button>
   </div>
 
-  <script src="script.js" defer></script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fix JS</title>
-</head>
-<body>
-  <button id="btn">Click me</button>
-
-  <script src="script.js"></script>
+  <script>
+    document.getElementById('btn').addEventListener('click', () => {
+      document.getElementById('msg').textContent =
+        'Button clicked at ' + new Date().toLocaleTimeString();
+    });
+  </script>
 </body>
 </html>
